# extropian-simulator

./: CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
assets/models/F117/: F117.stl
src/: main.cpp  modes.cpp  simulator_app.cpp
